Obtain the team stats from the API (Pending Tests and Doc)